style: fix a card body padding overflow bug

--- a/assets/styles/components/listing.scss
+++ b/assets/styles/components/listing.scss
@@ -32,7 +32,7 @@
       position: absolute;
       z-index: 2;
       top: 283.25px;
-      padding: 48px 24px;
+      padding: 36px 24px;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
 
       &-label {
